# robot

./: CMakeLists.txt  README.md
data/: cloud_002.pcd  cloud_003.pcd
src/: 01_iterative_closest_point2.cpp  03_normal_distributions_transform2.cpp  CMakeLists.txt  test.cpp
